--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,8 @@
   pages={eado2957},
   year={2024},
   publisher={American Association for the Advancement of Science}
-}
+  doi={10.1126/sciadv.ado2957},
+  html={https://www.science.org/doi/full/10.1126/sciadv.ado2957}}
 
 @article{xing2022site,
   title={Site-specific target-modification mutations exclusively induced by the coexposure to low levels of pesticides and streptomycin caused strong streptomycin resistance in clinically relevant Escherichia coli},
@@ -21,7 +22,8 @@
   pages={100141},
   year={2022},
   publisher={Elsevier}
-}
+  doi={10.1016/j.hazadv.2022.100141},
+  html={https://doi.org/10.1016/j.hazadv.2022.100141}}
 
 @article{xing2021specific,
   title={Specific phenotypic, genomic, and fitness evolutionary trajectories toward streptomycin resistance induced by pesticide co-stressors in Escherichia coli},
@@ -32,7 +34,8 @@
   pages={39},
   year={2021},
   publisher={Oxford University Press}
-}
+  doi={10.1038/s43705-021-00041-z},
+  html={https://doi.org/10.1038/s43705-021-00041-z}}
 
 @article{xing2020exposure,
   title={Exposure to environmental levels of pesticides stimulates and diversifies evolution in Escherichia coli toward higher antibiotic resistance},
@@ -43,7 +46,8 @@
   pages={8770--8778},
   year={2020},
   publisher={ACS Publications}
-}
+  doi={10.1021/acs.est.0c01155},
+  html={https://pubs.acs.org/doi/abs/10.1021/acs.est.0c01155}}
 
 @article{xing2018emerging,
   title={Emerging investigators series: occurrence and fate of emerging organic contaminants in wastewater treatment plants with an enhanced nitrification step},
@@ -54,7 +58,8 @@
   pages={1412--1426},
   year={2018},
   publisher={Royal Society of Chemistry}
-}
+  doi={10.1039/C8EW00278A},
+  html={https://doi.org/10.1039/C8EW00278A}}
 
 @article{jiang2016surface,
   title={Surface molecular imprinting on CdTe quantum dots for fluorescence sensing of 4-nitrophenol},
@@ -65,7 +70,8 @@
   pages={2226--2232},
   year={2016},
   publisher={Royal Society of Chemistry}
-}
+  doi={10.1039/C5AY03160E},
+  html={https://doi.org/10.1039/C5AY03160E}}
 
 @article{xing2015zwitterion,
   title={Zwitterion-immobilized imprinted polymers for promoting the crystallization of proteins},
@@ -76,7 +82,8 @@
   pages={4932--4937},
   year={2015},
   publisher={ACS Publications}
-}
+  doi={10.1021/acs.cgd.5b00819},
+  html={https://doi.org/10.1021/acs.cgd.5b00819}}
 
 @article{zhang2014synthesis,
   title={Synthesis of a novel cross-linker doubles as a functional monomer for preparing a water compatible molecularly imprinted polymer},
@@ -87,4 +94,5 @@
   pages={9483--9489},
   year={2014},
   publisher={Royal Society of Chemistry}
-}
+  doi={10.1039/C4AY01651C},
+  html={https://doi.org/10.1039/C4AY01651C}}
