--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 
-@article{yu2024electron,
+@article{10.1126/sciadv.ado2957,
   title={Electron bifurcation and fluoride efflux systems implicated in defluorination of perfluorinated unsaturated carboxylic acids by Acetobacterium spp},
   author={Yu, Yaochun and Xu, Fengjun and Zhao, Weiyang and Thoma, Calvin and Che, Shun and Richman, Jack E and Jin, Bosen and Zhu, Yiwen and Xing, Yue and Wackett, Lawrence and others},
   journal={Science Advances},
@@ -12,9 +12,9 @@
   year={2024},
   publisher={American Association for the Advancement of Science}
   doi={10.1126/sciadv.ado2957},
-  html={https://www.science.org/doi/full/10.1126/sciadv.ado2957}}
+  html={https://doi.org/10.1126/sciadv.ado2957}}
 
-@article{xing2022site,
+@article{10.1016/j.hazadv.2022.100141,
   title={Site-specific target-modification mutations exclusively induced by the coexposure to low levels of pesticides and streptomycin caused strong streptomycin resistance in clinically relevant Escherichia coli},
   author={Xing, Yue and Herrera, Daisy and Zhang, Siwei and Kang, Xiaoxi and Men, Yujie},
   journal={Journal of Hazardous Materials Advances},
@@ -25,7 +25,7 @@
   doi={10.1016/j.hazadv.2022.100141},
   html={https://doi.org/10.1016/j.hazadv.2022.100141}}
 
-@article{xing2021specific,
+@article{10.1038/s43705-021-00041-z,
   title={Specific phenotypic, genomic, and fitness evolutionary trajectories toward streptomycin resistance induced by pesticide co-stressors in Escherichia coli},
   author={Xing, Yue and Kang, Xiaoxi and Zhang, Siwei and Men, Yujie},
   journal={ISME communications},
@@ -37,7 +37,7 @@
   doi={10.1038/s43705-021-00041-z},
   html={https://doi.org/10.1038/s43705-021-00041-z}}
 
-@article{xing2020exposure,
+@article{10.1021/acs.est.0c01155,
   title={Exposure to environmental levels of pesticides stimulates and diversifies evolution in Escherichia coli toward higher antibiotic resistance},
   author={Xing, Yue and Wu, Shuaiqi and Men, Yujie},
   journal={Environmental science \& technology},
@@ -49,7 +49,7 @@
   doi={10.1021/acs.est.0c01155},
   html={https://pubs.acs.org/doi/abs/10.1021/acs.est.0c01155}}
 
-@article{xing2018emerging,
+@article{10.1039/C8EW00278A,
   title={Emerging investigators series: occurrence and fate of emerging organic contaminants in wastewater treatment plants with an enhanced nitrification step},
   author={Xing, Yue and Yu, Yaochun and Men, Yujie},
   journal={Environmental Science: Water Research \& Technology},
@@ -61,7 +61,7 @@
   doi={10.1039/C8EW00278A},
   html={https://doi.org/10.1039/C8EW00278A}}
 
-@article{jiang2016surface,
+@article{10.1039/C5AY03160E,
   title={Surface molecular imprinting on CdTe quantum dots for fluorescence sensing of 4-nitrophenol},
   author={Jiang, Linye and Liu, Haijian and Li, Ming and Xing, Yue and Ren, Xueqin},
   journal={Analytical Methods},
@@ -73,7 +73,7 @@
   doi={10.1039/C5AY03160E},
   html={https://doi.org/10.1039/C5AY03160E}}
 
-@article{xing2015zwitterion,
+@article{10.1021/acs.cgd.5b00819,
   title={Zwitterion-immobilized imprinted polymers for promoting the crystallization of proteins},
   author={Xing, Yue and Hu, Yufeng and Jiang, Lun and Gao, Zideng and Chen, Zhenhang and Chen, Zhongzhou and Ren, Xueqin},
   journal={Crystal Growth \& Design},
@@ -85,7 +85,7 @@
   doi={10.1021/acs.cgd.5b00819},
   html={https://doi.org/10.1021/acs.cgd.5b00819}}
 
-@article{zhang2014synthesis,
+@article{10.1039/C4AY01651C,
   title={Synthesis of a novel cross-linker doubles as a functional monomer for preparing a water compatible molecularly imprinted polymer},
   author={Zhang, Xiao and Shen, Feng and Zhang, Zhe and Xing, Yue and Ren, Xueqin},
   journal={Analytical Methods},
