--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   year={2024},
   publisher={American Association for the Advancement of Science}
   doi={10.1126/sciadv.ado2957},
-  html={https://doi.org/10.1126/sciadv.ado2957}}
+  url={https://doi.org/10.1126/sciadv.ado2957}}
 
 @article{10.1016/j.hazadv.2022.100141,
   title={Site-specific target-modification mutations exclusively induced by the coexposure to low levels of pesticides and streptomycin caused strong streptomycin resistance in clinically relevant Escherichia coli},
@@ -23,7 +23,7 @@
   year={2022},
   publisher={Elsevier}
   doi={10.1016/j.hazadv.2022.100141},
-  html={https://doi.org/10.1016/j.hazadv.2022.100141}}
+  url={https://doi.org/10.1016/j.hazadv.2022.100141}}
 
 @article{10.1038/s43705-021-00041-z,
   title={Specific phenotypic, genomic, and fitness evolutionary trajectories toward streptomycin resistance induced by pesticide co-stressors in Escherichia coli},
@@ -35,7 +35,7 @@
   year={2021},
   publisher={Oxford University Press}
   doi={10.1038/s43705-021-00041-z},
-  html={https://doi.org/10.1038/s43705-021-00041-z}}
+  url={https://doi.org/10.1038/s43705-021-00041-z}}
 
 @article{10.1021/acs.est.0c01155,
   title={Exposure to environmental levels of pesticides stimulates and diversifies evolution in Escherichia coli toward higher antibiotic resistance},
@@ -47,7 +47,7 @@
   year={2020},
   publisher={ACS Publications}
   doi={10.1021/acs.est.0c01155},
-  html={https://pubs.acs.org/doi/abs/10.1021/acs.est.0c01155}}
+  url={https://pubs.acs.org/doi/abs/10.1021/acs.est.0c01155}}
 
 @article{10.1039/C8EW00278A,
   title={Emerging investigators series: occurrence and fate of emerging organic contaminants in wastewater treatment plants with an enhanced nitrification step},
@@ -59,7 +59,7 @@
   year={2018},
   publisher={Royal Society of Chemistry}
   doi={10.1039/C8EW00278A},
-  html={https://doi.org/10.1039/C8EW00278A}}
+  url={https://doi.org/10.1039/C8EW00278A}}
 
 @article{10.1039/C5AY03160E,
   title={Surface molecular imprinting on CdTe quantum dots for fluorescence sensing of 4-nitrophenol},
@@ -71,7 +71,7 @@
   year={2016},
   publisher={Royal Society of Chemistry}
   doi={10.1039/C5AY03160E},
-  html={https://doi.org/10.1039/C5AY03160E}}
+  url={https://doi.org/10.1039/C5AY03160E}}
 
 @article{10.1021/acs.cgd.5b00819,
   title={Zwitterion-immobilized imprinted polymers for promoting the crystallization of proteins},
@@ -83,7 +83,7 @@
   year={2015},
   publisher={ACS Publications}
   doi={10.1021/acs.cgd.5b00819},
-  html={https://doi.org/10.1021/acs.cgd.5b00819}}
+  url={https://doi.org/10.1021/acs.cgd.5b00819}}
 
 @article{10.1039/C4AY01651C,
   title={Synthesis of a novel cross-linker doubles as a functional monomer for preparing a water compatible molecularly imprinted polymer},
@@ -95,4 +95,4 @@
   year={2014},
   publisher={Royal Society of Chemistry}
   doi={10.1039/C4AY01651C},
-  html={https://doi.org/10.1039/C4AY01651C}}
+  url={https://doi.org/10.1039/C4AY01651C}}
