--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@
 @article{10.1038/s43705-021-00041-z,
   title={Specific phenotypic, genomic, and fitness evolutionary trajectories toward streptomycin resistance induced by pesticide co-stressors in Escherichia coli},
   author={Xing, Yue and Kang, Xiaoxi and Zhang, Siwei and Men, Yujie},
-  journal={ISME communications},
+  journal={ISME Communications},
   volume={1},
   number={1},
   pages={39},
@@ -37,7 +37,7 @@
 @article{10.1021/acs.est.0c01155,
   title={Exposure to environmental levels of pesticides stimulates and diversifies evolution in Escherichia coli toward higher antibiotic resistance},
   author={Xing, Yue and Wu, Shuaiqi and Men, Yujie},
-  journal={Environmental science \& technology},
+  journal={Environmental Science \& Technology},
   volume={54},
   number={14},
   pages={8770--8778},
